# graphic_cli

./: .gitignore  Cargo.toml  LICENCE  NOTICE
graphic_cli/: Cargo.toml
graphic_cli/src/: casters.rs  chars.rs  draw.rs  element_traits.rs  elements.rs  error.rs  internal.rs  lib.rs  measurement.rs  traits.rs
graphic_cli/src/elements/: test_child.rs  tty_doc.rs
graphic_cli_derive/: Cargo.toml
graphic_cli_derive/src/: lib.rs
src/: colors.rs  element_traits.rs  elements.rs  error.rs  errors.rs  lib.rs  macros.rs  main.rs  measurement.rs  symbol.rs
src/element_traits/: child.rs  element.rs  parent.rs
src/elements/: child.rs  document.rs
