[package]
name = "graphic_cli"
version = "0.1.0"
authors = ["liambloom <liamrbloom@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

# [features]
# default = []
# tty = ["crossterm"]
# Add xml parser at some point

[dependencies]
# as_any_min = "1.0"
# graphic_cli_derive = { path = "../graphic_cli_derive" }
crossterm = { version = "0.18.2" } #, optional = true } # I've been working on this so long crossterm has had breaking updates
# paste = "1.0"
# lazy_static = "1.4.0"

# I can get the terminal width/height in pixels usin libc::winsize, but not on windows
[target.'cfg(unix)'.dependencies]
libc = "0.2"